更新微网站框架

--- a/config/categories.toml
+++ b/config/categories.toml
@@ -40,9 +40,9 @@
     path = "devtools"
     description = "开发工具"
 
-[[category]]
-    title = "About"
-    path = "/about"
-    description = "关于本博客"
-    # 外链，不去解析 markdwon
-    out_link = true
+#[[category]]
+#    title = "About"
+#    path = "/about"
+#    description = "关于本博客"
+#    # 外链，不去解析 markdwon
+#    out_link = true
